# CTraining

./: CMakeLists.txt
Exercise_1/: CMakeLists.txt  main.cpp  main_1.cpp  test.txt
Exercise_2/: CMakeLists.txt  main.cpp
Exerscise_3/: CMakeLists.txt  CommandParser.cpp  CommandParser.h  Cource.cpp  Cource.h  Course.cpp  Course.h  Exam.cpp  Exam.h  ICommand.h  IPerson.h  IPersone.h  IRecord.h  Show.cpp  Show.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
